# OccViewer

./: .gitignore  OccViewer.sln  README.md  launch.ps1
OccViewer.OccProxy/: OccProxy.cpp  OccViewer.OccProxy.vcxproj  OccViewer.OccProxy.vcxproj.filters  SelectionScheme.hpp
OccViewer.Viewer/: ActionStatus.cs  D3DViewer.cs  MainWindow.xaml  MainWindow.xaml.cs  OCCViewer.cs  OccViewer.Viewer.csproj
OccViewer.Viewer/Bridge/: D3DViewer.cs  OCCViewer.cs
OccViewer.Viewer/Common/: ActionStatus.cs  FileFilterConstants.cs  ModelFormat.cs
OccViewer.Viewer/Shortcut/: CombineShortcut.cs  DefaultActionShortcuts.cs  IActionShortcuts.cs  IntuitiveActionShortcuts.cs  MouseButtonTrigger.cs  PressedKey.cs
OccViewer.Viewer/Window/: MainWindow.xaml  MainWindow.xaml.cs
OccViewer.Viewer/WindowPage/: AboutWindow.xaml  AboutWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
OccViewer.ViewerProxy/: OccViewer.ViewerProxy.vcxproj  OccViewer.ViewerProxy.vcxproj.filters
OccViewer.ViewerProxy/include/: Viewer.h
OccViewer.ViewerProxy/src/: Viewer.cpp
PublishProject/: CMakeLists.txt  PublishProject.vcxproj  PublishProject.vcxproj.filters
Samples/ConsoleApp/: ConsoleApp.vcxproj  main.cpp
Samples/WpfApp/: MainWindow.xaml  MainWindow.xaml.cs  WpfApp.csproj
